gcc/testsuite/rust/rustc/ui/parser/issue-32505.rs
pub fn test() {
    foo(|_|) // { dg-error "" "" { target *-*-* } }
}

fn main() { }

